--- a/package.json
+++ b/package.json
@@ -20,39 +20,38 @@
   },
   "homepage": "https://github.com/neilff/react-liqbo.git",
   "dependencies": {
-    "axios": "^0.5.2",
-    "babel-core": "^4.7.4",
-    "babel-loader": "^4.1.0",
-    "classnames": "^1.2.0",
-    "css-loader": "^0.9.1",
-    "debounce": "^1.0.0",
-    "es6-loader": "^0.2.0",
-    "eventemitter3": "^0.1.6",
-    "express": "~4.9.x",
-    "extract-text-webpack-plugin": "^0.5.0",
+    "axios": "^0.5.4",
+    "babel-core": "^5.1.13",
+    "babel-loader": "^5.0.0",
+    "chart.js": "^1.0.2",
+    "classnames": "^1.2.2",
+    "cors": "^2.6.0",
+    "css-loader": "^0.12.0",
+    "eventemitter3": "^1.0.1",
+    "express": "^5.0.0-alpha.1",
+    "extract-text-webpack-plugin": "*",
     "fastclick": "^1.0.6",
-    "file-loader": "^0.8.1",
-    "flux": "^2.0.1",
+    "file-loader": "*",
+    "flux": "*",
     "gulp": "^3.8.11",
     "gulp-util": "^3.0.4",
     "gutil": "^1.6.4",
-    "immutable": "^3.7.1",
-    "jsx-loader": "^0.13.1",
-    "node-sass": "^2.1.1",
-    "pouchdb": "^3.3.1",
-    "q": "^1.2.0",
+    "immutable": "^3.7.2",
+    "jsx-loader": "^0.13.2",
+    "node-sass": "^3.0.0-beta.7",
+    "q": "^2.0.3",
     "ramda": "^0.13.0",
-    "react": "^0.13.0",
+    "react": "^0.13.2",
+    "react-chartjs": "^0.6.0",
     "react-document-title": "^1.0.2",
-    "react-gmaps": "^0.1.6",
-    "react-hot-loader": "^1.2.2",
+    "react-hot-loader": "^1.2.5",
     "react-intl": "^1.2.0",
     "react-router": "^0.13.2",
-    "sass-loader": "^0.6.0",
-    "style-loader": "^0.9.0",
-    "treo": "^0.5.0",
-    "url-loader": "^0.5.5",
-    "webpack": "^1.7.2",
-    "webpack-dev-server": "^1.7.0"
+    "sass-loader": "0.4.2",
+    "style-loader": "*",
+    "superagent": "^1.2.0",
+    "url-loader": "*",
+    "webpack": "^1.8.10",
+    "webpack-dev-server": "^1.8.2"
   }
 }
