--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "webpack-dev-server": "^1.8.2"
   },
   "devDependencies": {
+    "gulp-help": "^1.3.4",
     "gulp-nodemon": "^2.0.3"
   }
 }
