--- a/package.json
+++ b/package.json
@@ -52,9 +52,7 @@
     "superagent": "^1.2.0",
     "url-loader": "*",
     "webpack": "^1.8.10",
-    "webpack-dev-server": "^1.8.2"
-  },
-  "devDependencies": {
+    "webpack-dev-server": "^1.8.2",
     "gulp-help": "^1.3.4",
     "gulp-nodemon": "^2.0.3"
   }
