--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "engines": {
     "node": "0.10.x"
   },
-  "author": "Neil Fenton <neilff@gmail.com> (http://github.com/neilff)",
+  "author": "Neil Fenton <neilff@gmail.com> (https://github.com/neilff)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/neilff/react-scoreboard.git/issues"
