--- a/package.json
+++ b/package.json
@@ -34,9 +34,12 @@
     "file-loader": "*",
     "flux": "*",
     "gulp": "^3.8.11",
+    "gulp-help": "^1.3.4",
+    "gulp-nodemon": "^2.0.3",
     "gulp-util": "^3.0.4",
     "gutil": "^1.6.4",
     "immutable": "^3.7.2",
+    "intl": "^0.1.4",
     "jsx-loader": "^0.13.2",
     "node-sass": "^3.0.0-beta.7",
     "q": "^2.0.3",
@@ -52,8 +55,6 @@
     "superagent": "^1.2.0",
     "url-loader": "*",
     "webpack": "^1.8.10",
-    "webpack-dev-server": "^1.8.2",
-    "gulp-help": "^1.3.4",
-    "gulp-nodemon": "^2.0.3"
+    "webpack-dev-server": "^1.8.2"
   }
 }
