--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/neilff/react-scoreboard.git",
   "dependencies": {
+    "autoprefixer-loader": "^1.2.0",
     "axios": "^0.5.4",
     "babel-core": "^5.1.13",
     "babel-loader": "^5.0.0",
